apps/production/monitoring/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    gethomepage.dev/href: 'https://prometheus.homelab.cs-ol.de'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Prometheus
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/app: prometheus
    gethomepage.dev/name: Prometheus
    gethomepage.dev/widget.type: 'prometheus'
    gethomepage.dev/widget.url: 'https://prometheus.homelab.cs-ol.de'
    gethomepage.dev/pod-selector: ''
    gethomepage.dev/weight: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.homelab.cs-ol.de`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.homelab.cs-ol.de`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    gethomepage.dev/href: 'https://alertmanager.homelab.cs-ol.de'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Alertmanager
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: alertmanager.png
    gethomepage.dev/app: alertmanager
    gethomepage.dev/name: Alertmanager
    gethomepage.dev/pod-selector: ''
    gethomepage.dev/weight: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.homelab.cs-ol.de`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-alertmanager
          port: 9093
  tls: {}
